@@ -1,8 +1,10 @@
-CHANGES.txt - 2011-01-07
+CHANGES.txt - 2011-01-10
 ------------------------
 
 CHANGES IN CUPS V1.5b1
 
+	- The cupstestppd program now shows an error for files missing a
+	  CloseGroup keyword (STR #3668)
 	- Name resolution errors no longer cause queues to stop (STR #3719,
 	  STR #3753)
 	- Added a new cups-exec helper program that applies security profiles
